# video_streaming_server

./: .env  .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/database/: db.rs
src/error/: error.rs
src/list/: handler.rs  list.rs  mod.rs
src/preview_image/: mod.rs  preview_image.rs  preview_image_generator.py
src/routers/: router.rs
src/video/: handler.rs  header.rs  mod.rs  preview_image.rs  video.rs
static/: index.html
