[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"
authors = ["KimWang906"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = ["headers"] }
dotenv = "0.15.0"
ffmpeg-next = { version = "5.1.1" }
futures = "0.3.26"
hyper = "0.14.24"
image = "0.24.5"
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["cors"] }
